--- a/Submission-main/Submission-main/index.html
+++ b/Submission-main/Submission-main/index.html
@@ -20,6 +20,6 @@
         <a href="smd.html">    <input type="button" value="SMD" class="Button" id="Button5"></a>
     </div>
     
-    <footer>Made by Komal Hemraj Patil</footer>
+    <footer>Made by Nikita Bhosale</footer>
 </body>
 </html>
