--- a/Submission-main/Submission-main/spos.html
+++ b/Submission-main/Submission-main/spos.html
@@ -15,18 +15,19 @@
 <div id="Esiot">
 
     <a href=""> <input type="button" value="PBL Statement" class="ButtonES" id="Button6"></a>
-    <a href=""> <input type="button" value="Practical 1" class="ButtonES" id="Button7"></a>
-    <a href=""> <input type="button" value="Practical 2" class="ButtonES" id="Button8"></a>
-    <a href=""> <input type="button" value="Practical 3" class="ButtonES" id="Button9"></a>
-    <a href=""> <input type="button" value="Practical 4" class="ButtonES" id="Button10"></a>
-    <a href=""> <input type="button" value="Practical 5" class="ButtonES" id="Button11"></a>
-    <a href=""> <input type="button" value="Practical 6" class="ButtonES" id="Button12"></a>
-    <a href=""> <input type="button" value="Practical 7" class="ButtonES" id="Button13"></a>
-    <a href=""> <input type="button" value="Practical 8" class="ButtonES" id="Button14"></a>
-    <a href=""> <input type="button" value="Practical 9" class="ButtonES" id="Button15"></a>
-    <a href=""> <input type="button" value="Practical 10" class="ButtonES" id="Button16"></a>
-    <a href=""> <input type="button" value="Practical 11" class="ButtonES" id="Button17"></a>
+    <a href="https://drive.google.com/file/d/1_vZSh3Q1HrJ9yzQR55OrTHOKv7VQ4oug/view"> <input type="button" value="Practical 1" class="ButtonES" id="Button7"></a>
+    <a href="https://drive.google.com/file/d/1osqIiFHG2IhmJ9J9y65Ou-xHKYB4yhFU/view"> <input type="button" value="Practical 2" class="ButtonES" id="Button8"></a>
+    <a href="https://drive.google.com/file/d/1-5TjbFM2l2py4I7qJWJR6fuWA08LZKdO/view"> <input type="button" value="Practical 3" class="ButtonES" id="Button9"></a>
+    <a href="https://drive.google.com/file/d/1HeE_FgwGnE4WUddxOQW1ojerw03ULs1Z/view"> <input type="button" value="Practical 4" class="ButtonES" id="Button10"></a>
+    <a href="https://drive.google.com/file/d/124OUaHYbWqnJRYWTn5BlYCscHiDYXL0T/view"> <input type="button" value="Practical 5" class="ButtonES" id="Button11"></a>
+    <a href="https://drive.google.com/file/d/1npwAnpW5GoDfTw9b-P-F2GEDpTPI1wxF/view"> <input type="button" value="Practical 6" class="ButtonES" id="Button12"></a>
+    <a href="https://drive.google.com/file/d/1T9YsH-iaXWl158CJcv7n1xIOnHxR-6Py/view"> <input type="button" value="Practical 7" class="ButtonES" id="Button13"></a>
+    <a href="https://drive.google.com/file/d/1_dbsNZOSg2QZxU4n-828wT-805cqiIU5/view"> <input type="button" value="Practical 8" class="ButtonES" id="Button14"></a>
+    <a href="https://drive.google.com/file/d/1hTQipbW3WfwcmzlUNac3ThNiQQ4tH91C/view"> <input type="button" value="Practical 9" class="ButtonES" id="Button15"></a>
+    <a href="https://drive.google.com/file/d/1J8a0fm6_WQbA2-8UO3qGpiaNQFJ279mq/view"> <input type="button" value="Practical 10" class="ButtonES" id="Button16"></a>
+    <a href="https://drive.google.com/file/d/1-zTrdM9fL1KxpW-M5KDUuc64xzDjmmIL/view"> <input type="button" value="Practical 11" class="ButtonES" id="Button17"></a>
+    <a href="https://drive.google.com/file/d/1Xn6s4cJbW4fKVKGmDz8TH7aJxoi331iS/view"> <input type="button" value="Practical 12" class="ButtonES" id="Button18"></a>
 </div>
-<footer>Made by Komal Hemraj Patil</footer>
+<footer>Made by Nikita Bhosale</footer>
 </body>
 </html>
