--- a/Submission-main/Submission-main/daa.html
+++ b/Submission-main/Submission-main/daa.html
@@ -11,6 +11,6 @@
         <h3>Gokhale Education Society's R.H.Sapat College of Engineering,<br> Management, Skills and Research,Nashik-05</h3>
     </header>
     <p>No Content Available</p>
-    <footer>Made by Komal Hemraj Patil</footer>
+    <footer>Made by Nikita Bhosale</footer>
 </body>
 </html>
