--- a/Submission-main/Submission-main/esiot.html
+++ b/Submission-main/Submission-main/esiot.html
@@ -28,7 +28,7 @@
         <a href="https://drive.google.com/file/d/1lvM6mQMHJ2kLpNVMwfxc4chwcbZuSPjq/view"> <input type="button" value="Practical 11" class="ButtonES" id="Button17"></a>
         <a href="https://drive.google.com/file/d/1Q6URx4KmmlqYuY4fXHswEVBnvVaHS3wI/view"> <input type="button" value="Practical 12" class="ButtonES" id="Button17"></a>
     </div>
-    <footer>Made by Komal Hemraj Patil</footer>
+    <footer>Made by Nikita Bhosale</footer>
 </body>
 
 </html>
