--- a/Submission-main/Submission-main/smd.html
+++ b/Submission-main/Submission-main/smd.html
@@ -16,6 +16,6 @@
 
     <a href="https://drive.google.com/file/d/1ELVieWQ6QxBqkuekteZYoy10S2A_shG2/view"> <input type="button" value="PBL Statement" class="ButtonES" id="Button6"></a>
 </div>
-<footer>Made by Komal Hemraj Patil</footer>
+<footer>Made by Nikita Bhosale</footer>
 </body>
 </html>
