--- a/Submission-main/Submission-main/wt.html
+++ b/Submission-main/Submission-main/wt.html
@@ -14,19 +14,18 @@
     <h1 id="title">Web Technology Practicals</h1>
     <div id="Esiot">
     
-        <a href=""> <input type="button" value="PBL Statement" class="ButtonES" id="Button6"></a>
-        <a href=""> <input type="button" value="Practical 1" class="ButtonES" id="Button7"></a>
-        <a href=""> <input type="button" value="Practical 2" class="ButtonES" id="Button8"></a>
-        <a href=""> <input type="button" value="Practical 3" class="ButtonES" id="Button9"></a>
-        <a href=""> <input type="button" value="Practical 4" class="ButtonES" id="Button10"></a>
-        <a href=""> <input type="button" value="Practical 5" class="ButtonES" id="Button11"></a>
-        <a href=""> <input type="button" value="Practical 6" class="ButtonES" id="Button12"></a>
-        <a href=""> <input type="button" value="Practical 7" class="ButtonES" id="Button13"></a>
-        <a href=""> <input type="button" value="Practical 8" class="ButtonES" id="Button14"></a>
-        <a href=""> <input type="button" value="Practical 9" class="ButtonES" id="Button15"></a>
-        <a href=""> <input type="button" value="Practical 10" class="ButtonES" id="Button16"></a>
-        <a href=""> <input type="button" value="Practical 11" class="ButtonES" id="Button17"></a>
+        <a href="https://drive.google.com/file/d/11oOrEJ3rScTyYa5tO27q7hU2iGj3wiXB/view"> <input type="button" value="PBL Statement" class="ButtonES" id="Button6"></a>
+        <a href="https://drive.google.com/file/d/1yzC2BxcP-1UIUICGxhSxC0bMH2BlEpW6/view"> <input type="button" value="Practical 1" class="ButtonES" id="Button7"></a>
+        <a href="https://drive.google.com/file/d/1NdX8Oq6X_vxE0ws_EyDlM_9Ti0j74AFJ/view"> <input type="button" value="Practical 2" class="ButtonES" id="Button8"></a>
+        <a href="https://drive.google.com/file/d/1uCeyKIH3qgdcjhZPjmUXqMhKe5Vb3_sB/view"> <input type="button" value="Practical 3" class="ButtonES" id="Button9"></a>
+        <a href="https://drive.google.com/file/d/1ItMcQ1MxeGUH0TRJxwTerhK4MTyUl8bi/view"> <input type="button" value="Practical 4" class="ButtonES" id="Button10"></a>
+        <a href="https://drive.google.com/file/d/1sqUO5LAxkjT9zEQFX5dgrBZd8AUb6Fdf/view"> <input type="button" value="Practical 5" class="ButtonES" id="Button11"></a>
+        <a href="https://drive.google.com/file/d/1316sbKT8E9dyveNbXfihts540uK-XdmM/view"> <input type="button" value="Practical 6" class="ButtonES" id="Button12"></a>
+        <a href="https://drive.google.com/file/d/1398jgWqFa28s7qJGArJLlAyqmWcrvUpM/view"> <input type="button" value="Practical 7" class="ButtonES" id="Button13"></a>
+        <a href="https://drive.google.com/file/d/1398jgWqFa28s7qJGArJLlAyqmWcrvUpM/view"> <input type="button" value="Practical 8" class="ButtonES" id="Button14"></a>
+        <a href="https://drive.google.com/file/d/1Uq8iI9ZZuXRrReeX3iniS4Ut94zhv8oF/view"> <input type="button" value="Practical 9" class="ButtonES" id="Button15"></a>
+        <a href="https://drive.google.com/file/d/1Uq8iI9ZZuXRrReeX3iniS4Ut94zhv8oF/view"> <input type="button" value="Practical 10" class="ButtonES" id="Button16"></a>
     </div>
-    <footer>Made by Komal Hemraj Patil</footer>
+    <footer>Made by Nikita Bhosale</footer>
 </body>
 </html>
